# node-based-image-processor

./: README.md
1/: Node.h
10: ConvolutionFilter Node/: CMakeLists.txt  ConvolutionFilterNode.cpp  main1.cpp
11: Output Node/: CMakeLists.txt  OutputNode.cpp  OutputNode.h  main1.cpp
1: Window and Input Node/: LoadImageNode.h  main1.cpp  tinyfiledialogs.c  tinyfiledialogs.h
1: Window and LoadImageNode/: CMakeLists.txt
2/: BrightnessContrastNode.cpp  CMakeLists.txt
3/: CMakeLists.txt  ColorChannelSplitNode.h  LoadImageNode.cpp
3: ColorChannelSplitter Node/: CMakeLists.txt  ColorChannelSplitter.cpp  main1.cpp
4/: BrightnessContrastNode.cpp  LoadImageNode.cpp  LoadImageNode.h  main1.cpp
5/: CMakeLists.txt  LoadImageNode.cpp  Node.h  main1.cpp
5: Blur Node/: CMakeLists.txt  blurnode.cpp  blurnode.h
6/: BrightnessContrastNode.h  ColorChannelSplitter.cpp  ThresholdNode.cpp  ThresholdNode.h
6: Threshold Node/: CMakeLists.txt  main1.cpp
7/: EdgeDetectionNode.cpp
7: Edge Detection Node/: EdgeDetectionNode.h  main1.cpp
8/: CMakeLists.txt  ColorChannelSplitNode.h
8: Blend Node/: BlendNode.cpp  BlendNode.h  main1.cpp
9: NoiseGeneration Node/: CMakeLists.txt  NoiseGenerationNode.cpp  NoiseGenerationNode.h  main1.cpp
Final Project/: BlendNode.cpp  BlendNode.h  BrightnessContrastNode.cpp  CMakeLists.txt  ColorChannelSplitNode.h  ColorChannelSplitter.cpp  ConvolutionFilterNode.cpp  ConvolutionFilterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  LoadImageNode.cpp  LoadImageNode.h  Node.h  NoiseGenerationNode.cpp  NoiseGenerationNode.h  OutputNode.cpp  (+6 more)
(+2 files in other folders)
